data/derived/sp14/progs/unify/prog3435.ml.out
Characters 75-82:
  | Sine s -> Format.sprintf "%i" (sin (3 * 2));;
                                       ^^^^^^^
Error: This expression has type int but an expression was expected of type
         float
